<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/rectangle1"
        android:layout_width="@dimen/rectangle_width"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle1"
         />
    <ImageView
        android:id="@+id/rectangle2"
        android:layout_width="@dimen/rectangle_width"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle2"
        android:layout_marginStart="@dimen/marginStart1" />
    <ImageView
        android:id="@+id/rectangle3"
        android:layout_width="@dimen/rectangle_width"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle3"
        android:layout_marginStart="@dimen/marginStart2"
        />
    <ImageView
        android:id="@+id/rectangle6"
        android:layout_width="@dimen/cardWidth"
        android:layout_height="@dimen/cardHeight2"
        android:layout_marginStart="@dimen/CardMargin"
        android:layout_marginTop="@dimen/t1"
        android:src="@drawable/rectangle8" />
    <ImageView
        android:layout_width="@dimen/MarginGuitarist"
        android:layout_height="@dimen/playerHeight"
        android:layout_alignParentTop="true"
        android:src="@drawable/player"
        android:layout_marginStart="@dimen/InstrumentMargin1" />
    <ImageView
        android:layout_width="@dimen/imgWidth"
        android:layout_height="wrap_content"
        android:src="@drawable/muzikgallery"
        android:layout_marginTop="@dimen/MGmTop"
        android:layout_marginStart="@dimen/InstrumentMargin1" />
    <TextView
        android:id="@+id/musicgallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iconmoon"
        android:layout_marginTop="@dimen/MGmarginTop"
        android:text="@string/music_gallery"
        android:textSize="@dimen/TextSizePrimary"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/textMarginStart" />
    <TextView
        android:fontFamily="@font/iconmoon"
        android:id="@+id/address1"
        android:autoLink="map"
        android:onClick="process"
        android:layout_width="@dimen/addressWidth"
        android:layout_height="wrap_content"
        android:textSize="@dimen/TextSizeSecondary"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/addressMarginTop"
        android:text="@string/address1"
        android:textColor="@color/black"
        android:alpha="0.8"
        android:layout_marginStart="@dimen/textMarginStart" />
    <TextView
        android:fontFamily="@font/iconmoon"
        android:id="@+id/address2"
        android:layout_width="@dimen/addressWidth"
        android:layout_height="wrap_content"
        android:autoLink="map"
        android:textSize="@dimen/TextSizeSecondary"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/address2MarginTop"
        android:text="@string/address2"
        android:textColor="@color/black"
        android:alpha="0.8"
        android:layout_marginStart="@dimen/textMarginStart" />
     <TextView
         android:fontFamily="@font/iconmoon"
         android:id="@+id/contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/contactMargintop"
         android:text="@string/contact"
         android:textColor="@color/black"
         android:textSize="@dimen/TextSizeSecondary"
         android:layout_marginStart="@dimen/textMarginStart"
         android:autoLink="phone"
         />
     <ImageView
         android:layout_width="@dimen/cardWidth"
         android:layout_marginTop="@dimen/rectangleMarginTop"
         android:background="@drawable/rectangle7"
         android:layout_height="@dimen/cardHeight"
         android:layout_marginStart="@dimen/CardMargin" />
    <ImageView
        android:src="@drawable/guitar"
        android:tint="@color/white"
        android:layout_width="@dimen/instrumentIcon"
        android:layout_height="@dimen/instrumentIcon"
        android:layout_marginTop="@dimen/Row1marginTop"
        android:layout_marginStart="@dimen/instrumentMarginLeft" />
    <TextView
        android:fontFamily="@font/iconmoon"
        android:id="@+id/guitar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guitar"
        android:layout_marginTop="@dimen/Row1marginTop"
        android:textColor="@color/white"
        android:textSize="@dimen/TextSizePrimary"
        android:layout_marginStart="@dimen/InstrumentMargin1" />
    <ImageView
        android:src="@drawable/piano"
        android:tint="#ffffff"
        android:layout_width="@dimen/instrumentIcon"
        android:layout_height="@dimen/instrumentIcon"
        android:layout_marginTop="@dimen/Row1marginTop"
        android:layout_marginStart="@dimen/instrument2MarginLeft" />
    <TextView
        android:fontFamily="@font/iconmoon"
        android:id="@+id/keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyboard"
        android:layout_marginTop="@dimen/Row1marginTop"
        android:textColor="@color/white"
        android:textSize="@dimen/TextSizePrimary"
        android:layout_marginStart="@dimen/instNameMarginLeft" />
    <ImageView
        android:src="@drawable/drum"
        android:tint="@color/white"
        android:layout_width="@dimen/instrumentIcon"
        android:layout_height="@dimen/instrumentIcon"
        android:layout_marginTop="@dimen/Row2MarginTop"
        android:layout_marginStart="@dimen/instrument2MarginLeft" />
    <TextView
        android:fontFamily="@font/iconmoon"
        android:id="@+id/drums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drums"
        android:layout_marginTop="@dimen/Row2MarginTop"
        android:textColor="@color/white"
        android:textSize="@dimen/TextSizePrimary"
        android:layout_marginStart="@dimen/instNameMarginLeft" />
    <ImageView
        android:src="@drawable/harmonium"
        android:tint="@color/white"
        android:layout_width="@dimen/instrumentIcon"
        android:layout_height="@dimen/instrumentIcon"
        android:layout_marginTop="@dimen/Row2MarginTop"
        android:layout_marginStart="@dimen/instrumentMarginLeft" />
    <TextView
        android:fontFamily="@font/iconmoon"
        android:id="@+id/harmonium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harmonium"
        android:layout_marginTop="@dimen/Row2MarginTop"
        android:textColor="@color/white"
        android:textSize="@dimen/TextSizePrimary"
        android:layout_marginStart="@dimen/InstrumentMargin1" />
    <ImageView
        android:src="@drawable/tabla"
        android:tint="@color/white"
        android:layout_width="@dimen/instrumentIcon"
        android:layout_height="@dimen/instrumentIcon"
        android:layout_marginTop="@dimen/row3margintop"
        android:layout_marginStart="@dimen/instrumentMarginLeft" />
    <TextView
        android:fontFamily="@font/iconmoon"
        android:id="@+id/tabla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tabla"
        android:layout_marginTop="@dimen/row3margintop"
        android:textColor="@color/white"
        android:textSize="@dimen/TextSizePrimary"
        android:layout_marginStart="@dimen/InstrumentMargin1" />
    <ImageView
        android:src="@drawable/flute"
        android:tint="@color/white"
        android:layout_width="@dimen/instrumentIcon"
        android:layout_height="@dimen/instrumentIcon"
        android:layout_marginTop="@dimen/row3margintop"
        android:layout_marginStart="@dimen/instrument2MarginLeft" />
    <TextView
        android:fontFamily="@font/iconmoon"
        android:id="@+id/flute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flute"
        android:layout_marginTop="@dimen/row3margintop"
        android:textColor="@color/white"
        android:textSize="@dimen/TextSizePrimary"
        android:layout_marginStart="@dimen/instNameMarginLeft" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/openclosemargintop"
         android:layout_marginStart="@dimen/openclosemarginstart"
         android:textColor="@color/black"
         android:textSize="@dimen/TextSizeSecondary"
         android:text=" Opens Closes - 9"
         />
</RelativeLayout>
